added new at a glance features (hide some days)

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,7 +18,7 @@
     <string name="menu_category_school">High school</string>
     <string name="menu_category_settings">Settings</string>
     <string name="menu_category_substitution">Cover plan</string>
-    <string name="menu_both">At a glance!</string>
+    <string name="menu_at_one_glance">At a glance!</string>
     <string name="menu_impressum">About</string>
     <string name="menu_update">Updates</string>
     <string name="changelog">Changelog</string>
