--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_category_school">Gymnasium</string>
     <string name="menu_category_settings">Einstellungen</string>
     <string name="menu_category_substitution">Vertretungsplan</string>
-    <string name="menu_both">Auf einen Blick!</string>
+    <string name="menu_at_one_glance">Auf einen Blick!</string>
     <string name="menu_impressum">Über</string>
     <string name="menu_update">Updates</string>
     <string name="changelog">Änderungen</string>
