--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="with_teacher">bei</string>
     <string name="missing_short" translatable="false">entf</string>
     <string name="add_to_my_courses">Zu meinen Kursen hinzufügen</string>
+    <string name="remove_from_my_courses">Aus meinen Kursen entfernen</string>
 
     <!--    Table-->
     <string name="classes">Klasse</string>
