added swipe to refresh

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,8 @@
     <string name="set_single_days">Tage einzeln anzeigen</string>
     <string name="set_old_title">Alte Überschrift</string>
     <string name="set_design_no_sections">Gefiltert \u0026 Gesamt zusammen anzeigen</string>
+    <string name="set_swipe_to_refresh">Herunterziehen zum Aktualisieren</string>
+    <string name="set_at_filtered_plan">Auch beim gefilterten Plan</string>
 
 
     <!-- SubstitutionPlan -->
@@ -436,6 +438,8 @@
     <string name="set_desc_show_borders">Alle Lehrerkürzel, die angeklickt werden können, umranden</string>
     <string name="set_desc_old_substitution">Altes Aussehen des Vertretungsplans (kann auch über die Farbpalette in der Titelleiste geändert werden)</string>
     <string name="set_desc_old_title">Die Überschrift im alten Design anzeigen.</string>
+    <string name="set_desc_swipe_to_refresh"></string>
+    <string name="set_desc_swipe_to_refresh_filtered"></string>
 
     <string name="set_desc_alwaysNotification">Die Benachrichtigung kann nur noch manuell ausgeblendet werden</string>
     <string name="set_desc_two_notifs">Für jeden Tag eine eigene Benachrichtigung anzeigen</string>
