--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -370,5 +370,18 @@
     <string name="shortcut_navigation">Navigation</string>
     <string name="shortcut_call_office">Call Office</string>
     <string name="shortcut_newspaper">Newspaper</string>
+    <string name="set_swipe_to_refresh">Swipe to refresh</string>
+    <string name="set_at_filtered_plan">Even with the filtered plan</string>
+    <string name="set_intelligent_hide">Intelligent hiding</string>
+    <string name="notification_main_channel_title">Substitution plan Important</string>
+    <string name="notification_main_channel_description">A notification that sends you your current representatives</string>
+    <string name="more">more</string>
+    <string name="set_desc_intelligent_hide">Past or no longer relevant days are hidden.</string>
+    <string name="no_navi">You have no navigation app installed.</string>
+    <string name="set_main_notif_for_all_desc">You can select a profile with an asterisk in the edit profile view. Usually, a concise notification is only sent for this individual profile. If none is selected, no concise notification is sent.</string>
+    <string name="set_show_summary_usual_desc">Usually the profiles that are in the concise notification are not sent in the summary</string>
+    <string name="set_show_summary_notif_title">Show summary notification</string>
+    <string name="set_show_summary_usual_title">Show all profiles in the summary notification</string>
+    <string name="set_main_notif_for_all_title">Send the concise notification for all profiles</string>
 
 </resources>
