--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="menu_at_one_glance">Auf einen Blick!</string>
     <string name="menu_impressum">Über</string>
     <string name="menu_update">Updates</string>
+    <string name="menu_auto_update_check">Im Hintergrund prüfen</string>
     <string name="changelog">Änderungen</string>
     <string name="menu_shop">Online Shop</string>
     <string name="menu_teacher_list">Lehrerliste</string>
@@ -460,6 +461,7 @@
     <string name="set_desc_notification_fragment">Einstellungen für die Benachrichtigung</string>
     <string name="set_desc_parents">Bestimmte Funktionen aktivieren, die v.a. für Eltern nützlich sind, z.B. ClaXss</string>
     <string name="set_desc_updates">Auf Aktualisierungen überprüfen</string>
+    <string name="set_desc_check_background_updates">Automatisch im Hintergrund auf Aktualisierungen prüfen</string>
     <string name="set_desc_offline_mode">Bestimmte Dinge lokal speichern, damit die App ohne Internet funktioniert</string>
 
     <string name="set_desc_both">Wird, auch falls deaktiviert, immer beim ersten App-Start geladen!</string>
