--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -324,7 +324,7 @@
     <string name="set_single_days">Display days individually</string>
     <string name="set_old_title">Old headline</string>
     <string name="set_design_no_sections">Show filtered \u0026 total together</string>
-    <string name="click_picture">Click picture</string>
+    <string name="tap_picture">Tap picture</string>
     <string name="colorush_screen1">Boss mode</string>
     <string name="colorush_screen2">Choosing mode</string>
     <string name="colorush_screen3">Level 1</string>
@@ -385,5 +385,7 @@
     <string name="set_main_notif_for_all_title">Send the concise notification for all profiles</string>
     <string name="menu_auto_update_check">Check in Background</string>
     <string name="set_desc_check_background_updates">Check automatically in background for app updates</string>
+    <string name="shortcut_mensa">Cafeteria</string>
+    <string name="shortcut_teacher_list">Teacherlist</string>
 
 </resources>
