--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,7 +227,7 @@
     <string name="action_open_in_browser">Im Browser öffnen</string>
     <string name="share_link">Link teilen mit\u2026</string>
     <string name="error">Es ist ein Fehler aufgetreten.</string>
-    <string name="click_picture">Bild anklicken</string>
+    <string name="tap_picture">Bild antippen</string>
 
     <!-- Notification-->
     <string name="notification_summary_channel_title">Vertretungsplan</string>
@@ -476,6 +476,9 @@
     <string name="shortcut_navigation">Navigation</string>
     <string name="shortcut_call_office">Sekretariat</string>
     <string name="shortcut_newspaper">Zeitung</string>
+    <string name="shortcut_mebis" translatable="false">Mebis</string>
+    <string name="shortcut_mensa">Mensa</string>
+    <string name="shortcut_teacher_list">Lehrerliste</string>
 
 
     <!-- Maps -->
