--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -502,4 +502,9 @@
 
     <!-- Room plan -->
     <string name="not_found">nicht gefunden</string>
+    <string name="cannot_load_room_plan">Raumplan konnte nicht geladen werden</string>
+    <string name="action_search">Suchen</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
