--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -504,7 +504,7 @@
     <string name="not_found">nicht gefunden</string>
     <string name="cannot_load_room_plan">Raumplan konnte nicht geladen werden</string>
     <string name="action_search">Suchen</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="main_floor">Erdgeschoss</string>
+    <string name="floor">Stock</string>
+    <string name="gym">Sporthalle</string>
 </resources>
