--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -411,5 +411,6 @@
     <string name="main_floor">Ground floor</string>
     <string name="floor">Floor</string>
     <string name="gym">Gym</string>
+    <string name="shortcut_room_plan">House plan</string>
 
 </resources>
