added many parts of integrating substitutionplan in timetable

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,7 +32,7 @@
     <string name="menu_website">Homepage</string>
     <string name="menu_mebis">Mebis</string>
     <string name="menu_mensa">Cafeteria (kitafino)</string>
-    <string name="menu_category_other">Various apps</string>
+    <string name="menu_category_other">More</string>
     <string name="menu_category_school">High school</string>
     <string name="menu_category_settings">Settings</string>
     <string name="menu_category_substitution">Cover plan</string>
