--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="menu_website">Startseite</string>
     <string name="menu_mebis">Mebis</string>
     <string name="menu_mensa">Mensa (kitafino)</string>
-    <string name="menu_category_other">Diverse Apps</string>
+    <string name="menu_category_other">Diverses</string>
     <string name="menu_category_school">Gymnasium</string>
     <string name="menu_category_settings">Einstellungen</string>
     <string name="menu_category_substitution">Vertretungsplan</string>
