added new integration logic in timetable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -574,4 +574,7 @@
     <string name="timetable_credit">Entstanden mit Hilfe von ulan17</string>
     <string name="time_from">von</string>
 
+    <string name="integrate_substitution_in_timetable">Vertretungen im Stundenplan anzeigen</string>
+    <string name="integrate_substitution_in_timetable_desc">Zum Editieren des Stundenplans besser ausschalten</string>
+
 </resources>
