--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -580,5 +580,7 @@
     <string name="integrate_substitution_in_timetable_desc">Zum Editieren des Stundenplans besser ausschalten</string>
     <string name="edit">Bearbeiten</string>
     <string name="submit_delete">Wirklich löschen?</string>
+    <string name="automatic_update_check">Automatisch auf Updates prüfen</string>
+    <string name="url">URL</string>
 
 </resources>
