added do not disturb turn on if lesson

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -525,12 +525,11 @@
     <string name="sunday">Sonntag</string>
     <string name="selected">Ausgewählt</string>
 
-    <string name="timetable">Stundenplan</string>
+    <string name="timetable_activity_title">Stundenplan</string>
     <string name="seven_days_of_the_week">7 Tage die Woche</string>
     <string name="field_error">Feld darf nicht leer sein!</string>
     <string name="time_error">Zeitfeld darf nicht leer sein!</string>
     <string name="delete">Löschen</string>
-
     <string name="add_subject">Stunde hinzufügen</string>
     <string name="edit_subject">Stunde bearbeiten</string>
     <string name="time">Zeit</string>
@@ -547,8 +546,7 @@
     <string name="choose_time">Zeit</string>
     <string name="choose_date">Datum</string>
 
-    <string name="homeworks">Hausaufgaben</string>
-    <string name="select_date">Datum</string>
+    <string name="homeworks_activity_title">Hausaufgaben</string>
     <string name="deadline_dialog">Deadline:</string>
     <string name="description_dialog">Beschreibung:</string>
     <string name="desctiption">Beschreibung</string>
@@ -558,7 +556,7 @@
     <string name="deadline_snackbar">Deadline-Feld darf nicht leer sein!</string>
     <string name="date">Datum</string>
 
-    <string name="notes">Notizen</string>
+    <string name="notes_activity_title">Notizen</string>
     <string name="note">Notiz</string>
     <string name="title_dialog">Titel:</string>
     <string name="add_note">Notiz hinzufügen</string>
@@ -566,7 +564,7 @@
     <string name="title_error">Titelfeld darf nicht leer sein!</string>
     <string name="saved">Speichern</string>
 
-    <string name="exams">Prüfungen</string>
+    <string name="exams_activity_title">Prüfungen</string>
     <string name="add_exam">Prüfung hinzufügen</string>
     <string name="date_dialog">Datum:</string>
     <string name="time_dialog">Zeit:</string>
@@ -575,12 +573,15 @@
     <string name="notification_title">Der heutige Unterricht:</string>
     <string name="timetable_credit">Entstanden mit Hilfe von ulan17</string>
     <string name="time_from">von</string>
-
     <string name="integrate_substitution_in_timetable">Vertretungen im Stundenplan anzeigen</string>
     <string name="integrate_substitution_in_timetable_desc">Zum Editieren des Stundenplans besser ausschalten</string>
     <string name="edit">Bearbeiten</string>
     <string name="submit_delete">Wirklich löschen?</string>
     <string name="automatic_update_check">Automatisch auf Updates prüfen</string>
     <string name="url">URL</string>
+
+    <string name="timetable_channel">Stundenplan</string>
+    <string name="timetable_channel_desc">Eine Benachrichtigung mit deinen Fächern</string>
+    <string name="do_not_disturb_permission_desc">Um automatisch in den Nicht-Stören Modus zu wechseln benötigt die App die entsprechende Berechtigung</string>
 
 </resources>
