--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -415,5 +414,87 @@
     <string name="close">Close</string>
     <string name="shortcut_room_plan_search">Find room</string>
     <string name="unkown_floor">undefined floor</string>
+
+    <string name="app_name">TimeTable</string>
+
+    <!-- Fragments strings -->
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="selected">Selected</string>
+
+    <!-- Main Activity strings -->
+    <string name="seven_days_of_the_week">7 Days of the Week</string>
+    <string name="field_error">field can not be empty!</string>
+    <string name="time_error">Time field can not be empty!</string>
+    <string name="delete">Delete</string>
+
+    <string name="add_subject">Add subject</string>
+    <string name="edit_subject">Edit subject</string>
+    <string name="time">Time</string>
+    <string name="save">Save</string>
+    <string name="time_to_dialog">To:</string>
+    <string name="time_from_dialog">From:</string>
+    <string name="subject_dialog">Subject:</string>
+    <string name="teacher_dialog">Teacher:</string>
+    <string name="room_dialog">Room:</string>
+    <string name="select_time">Select time</string>
+    <string name="select_color">Select color</string>
+    <string name="choose_time">Choose time</string>
+    <string name="choose_date">Choose date</string>
+
+    <!-- Homeworks Activity strings -->
+    <string name="deadline_dialog">Deadline:</string>
+    <string name="description_dialog">Description:</string>
+    <string name="desctiption">Desctiption</string>
+    <string name="date_error">Date field can not be empty!</string>
+    <string name="edit_homework">Edit homework</string>
+    <string name="add_homework">Add homework</string>
+    <string name="deadline_snackbar">Deadline field can not be empty!</string>
+    <string name="date">Date</string>
+
+    <!-- Notes Activity strings -->
+    <string name="title_dialog">Title:</string>
+    <string name="add_note">Add note</string>
+    <string name="edit_note">Edit note</string>
+    <string name="title_error">Title field can not be empty!</string>
+    <string name="title">Title</string>
+    <string name="saved">Saved</string>
+
+    <!-- Teachers Activity strings -->
+
+    <!-- Exams Activity strings -->
+    <string name="add_exam">Add exam</string>
+    <string name="date_dialog">Date:</string>
+    <string name="time_dialog">Time:</string>
+
+    <!-- Settings Activity strings -->
+    <string name="sevendays_setting">Enable 7 Days of the Week</string>
+    <string name="timetable_activity_title">Timetable</string>
+    <string name="select_start_time">Start</string>
+    <string name="select_end_time">End</string>
+    <string name="choose_color">Choose color</string>
+    <string name="homeworks_activity_title">Homework</string>
+    <string name="notes_activity_title">Notes</string>
+    <string name="note">Note</string>
+    <string name="exams_activity_title">Exams</string>
+    <string name="timetable_notification_summary_title">Today\'s lessons:</string>
+    <string name="timetable_notification_next_week_title">Next lesson:</string>
+    <string name="timetable_credit">Credits go to ulan17</string>
+    <string name="time_from">from</string>
+    <string name="integrate_substitution_in_timetable">Show sit-in in timetable</string>
+    <string name="integrate_substitution_in_timetable_desc">If you want to edit the timetable, please disable this</string>
+    <string name="edit">Edit</string>
+    <string name="submit_delete">Submit delete</string>
+    <string name="automatic_update_check">Automatic update check</string>
+    <string name="timetable_channel">Timetable</string>
+    <string name="timetable_channel_desc">A notification about your lessons</string>
+    <string name="do_not_disturb_permission_desc">In order to automatically switch to do not disturb mode, the app requires the appropriate authorization</string>
+    <string name="do_not_disturb_setting">Automatic Do not disturb</string>
+    <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects and then switch it off again</string>
 
 </resources>
