--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -253,7 +253,7 @@
     <string name="notification_summary_channel_title">Vertretungsplan</string>
     <string name="notification_summary_channel_description">Eine zusammenfassende Benachrichtigung über den Vertretungsplan</string>
     <string name="notification_main_channel_title">Vertretungsplan Wichtig</string>
-    <string name="notification_main_channel_description">Eine Benachrichtigung die dir deine aktuellen Vertretungen sendet</string>
+    <string name="notification_main_channel_description">Eine Benachrichtigung, die dir deine aktuellen Vertretungen sendet</string>
     <string name="notif_content_title">Vertretung:</string>
     <string name="notif_dismiss">Verbergen</string>
     <string name="notif_nothing">Keine Vertretung</string>
@@ -391,14 +391,14 @@
     <string name="intro_three_title">Lehrerliste</string>
     <string name="intro_three_desc">Du kannst die Lehrerliste durchsuchen und sofort eine E-Mail an den Lehrer schreiben.</string>
     <string name="intro_four_title">Elternmodus</string>
-    <string name="intro_four_desc">Außerdem ist diese App auch für Eltern sehr nützlich. So kann man verschiedene Profile für jedes Kind anlegen und bestimmte Funktionen, die besonders für Eltern nützlich sind, benutzen.</string>
+    <string name="intro_four_desc">Außerdem ist diese App auch für Eltern sehr nützlich. So kann man verschiedene Profile für jedes Kind anlegen und bestimmte Funktionen, die besonders für Eltern vorteilhaft sind, benutzen.</string>
     <string name="intro_five_title">Viele tolle Features</string>
     <string name="intro_five_desc">Des Weiteren kannst du eine für Smartphones optimierte Version der Schulhomepage aufrufen sowie deine Noten und deinen Stundenplan verwalten. Außerdem gibt es noch viele weitere Dinge, für die hier leider kein Platz mehr ist.</string>
 
     <!-- Registration -->
     <string name="dont_show_again">Nicht wieder anzeigen</string>
     <string name="registration_dialog_title">Nutzerzählung</string>
-    <string name="registration_dialog_content">Um herauszufinden, wie viele Personen diese App nutzen, möchte ich eine Nutzerzählung durchführen. Dabei werden (nur die) Metadaten deiner Internetverbdingung, wie die IP-Adresse oder die Uhrzeit gespeichert.\n
+    <string name="registration_dialog_content">Um herauszufinden, wie viele Personen diese App nutzen, möchte ich eine Nutzerzählung durchführen. Dabei werden (nur die) Metadaten deiner Internetverbindung, wie die IP-Adresse oder die Uhrzeit gespeichert.\n
         Möchtest du daran teilnehmen?</string>
 
     <!-- Quick Settings Tile -->
@@ -433,7 +433,7 @@
         </tt></p>
         <p><tt>
         Die Veröffentlichung dieses Programms erfolgt in der Hoffnung,
-        daß es Ihnen von Nutzen sein wird, aber OHNE IRGENDEINE GARANTIE,
+        dass es Ihnen von Nutzen sein wird, aber OHNE IRGENDEINE GARANTIE,
         sogar ohne die implizite Garantie der MARKTREIFE oder der
         VERWENDBARKEIT FÜR EINEN BESTIMMTEN ZWECK. Details finden Sie in
         der GNU General Public License.
@@ -450,7 +450,7 @@
     <!-- Settings descriptions -->
     <string name="set_desc_courses">Einzelne Kurse mit einem # zwischen den Kursen trennen, z.B. 1ph3#1d4#1bio2</string>
     <string name="set_desc_hours">Die Stundenanzeige durch die jeweilige Uhrzeit ersetzen, z.B. 8:10 statt 1</string>
-    <string name="set_desc_summarize">Einzelne Stunden mit demselben Inhalt zusammenfassen (Beipielsweise der Raumtausch einer Doppelstunde).</string>
+    <string name="set_desc_summarize">Einzelne Stunden mit demselben Inhalt zusammenfassen (Beispielsweise der Raumtausch einer Doppelstunde).</string>
     <string name="set_desc_week_dates">Immer den zum Datum gehörenden Wochentag anzeigen (auch wenn der Tag schon vergangen ist)</string>
     <string name="set_desc_show_full_names">Alle Lehrerkürzel durch den jeweiligen Nachnamen ersetzen</string>
     <string name="set_desc_credentials_fragment">Einstellungen für das Herunterladen des Vertretungsplans/Lehrerliste</string>
@@ -461,7 +461,7 @@
     <string name="set_desc_tomorrow_url">Link zum zweiten Tag (üblicherweise der morgige Tag)</string>
     <string name="set_desc_teacherlist_url">Link zur Lehrerliste</string>
 
-    <string name="set_desc_accentColor">Die Farbe mit der Wichtiges hervorgehoben wird, z.B. die Stunden beim Vertretungsplan</string>
+    <string name="set_desc_accentColor">Die Farbe, mit der Wichtiges hervorgehoben wird, z.B. die Stunden beim Vertretungsplan</string>
     <string name="set_desc_primaryColor">Die Farbe der Titelleiste</string>
     <string name="set_desc_menu_items_fragment">Bestimmte Einträge der Navigationsleiste verbergen oder anzeigen</string>
     <string name="set_desc_show_borders">Alle Lehrerkürzel, die angeklickt werden können, umranden</string>
@@ -471,8 +471,8 @@
     <string name="set_desc_alwaysNotification">Die Benachrichtigung kann nur noch manuell ausgeblendet werden</string>
     <string name="set_desc_two_notifs">Für jeden Tag eine eigene Benachrichtigung anzeigen</string>
     <string name="set_desc_alarm">Die Benachrichtigung zu einer bestimmten Uhrzeit anzeigen</string>
-    <string name="set_main_notif_for_all_desc">Man kann in der Profil-Bearbeiten Ansicht ein Profil mit einem Stern auswählen. Normalerweise wird nur für dieses einzelne Profil eine prägnante Benachrichtigung gesendet. Ist gar keines ausgewählt wird auch keine prägnante Benachrichtigung gesendet.</string>
-    <string name="set_show_summary_usual_desc">Normalerweise werden die Profile die in der prägnanten Benachrichtigung sind, nicht in der zusammenfassenden gesendet</string>
+    <string name="set_main_notif_for_all_desc">Man kann in der Profil-Bearbeiten-Ansicht ein Profil mit einem Stern auswählen. Normalerweise wird nur für dieses einzelne Profil eine prägnante Benachrichtigung gesendet. Ist gar keines ausgewählt, wird auch keine prägnante Benachrichtigung gesendet.</string>
+    <string name="set_show_summary_usual_desc">Normalerweise werden die Profile, die in der prägnanten Benachrichtigung sind, nicht in der zusammenfassenden gesendet</string>
 
     <string name="set_desc_parents">Bestimmte Funktionen aktivieren, die v.a. für Eltern nützlich sind, z.B. ClaXss</string>
     <string name="set_desc_updates">Auf Aktualisierungen überprüfen</string>
@@ -550,7 +550,7 @@
     <string name="homeworks_activity_title">Hausaufgaben</string>
     <string name="deadline_dialog">Deadline:</string>
     <string name="description_dialog">Beschreibung:</string>
-    <string name="desctiption">Beschreibung</string>
+    <string name="description">Beschreibung</string>
     <string name="date_error">Datumsfeld darf nicht leer sein!</string>
     <string name="edit_homework">Hausaufgabe bearbeiten</string>
     <string name="add_homework">Hausaufgabe hinzufügen</string>
@@ -584,9 +584,9 @@
 
     <string name="timetable_channel">Stundenplan</string>
     <string name="timetable_channel_desc">Eine Benachrichtigung mit deinen Fächern</string>
-    <string name="do_not_disturb_permission_desc">Um automatisch in den Nicht-Stören Modus zu wechseln benötigt die App die entsprechende Berechtigung</string>
+    <string name="do_not_disturb_permission_desc">Um automatisch in den Nicht-Stören-Modus zu wechseln, benötigt die App die entsprechende Berechtigung</string>
     <string name="do_not_disturb_setting">Automatisches Stummschalten</string>
-    <string name="do_not_disturb_settings_desc">Automatisch während Fächern in den Nicht-Stören Modus wechseln und ihn danach wieder ausschalten</string>
+    <string name="do_not_disturb_settings_desc">Automatisch während Fächern in den Nicht-Stören-Modus wechseln und ihn danach wieder ausschalten</string>
     <string name="do_not_disturb_turn_off">Auch wieder auf laut stellen</string>
 
 </resources>
