--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -572,7 +572,7 @@
 
     <string name="sevendays_setting">7 Tage pro Woche einstellen</string>
     <string name="timetable_notification_summary_title">Der heutige Unterricht:</string>
-    <string name="timetable_notification_next_week_title">Nächstes Fach:</string>
+    <string name="timetable_notification_next_week_title">Nächstes Fach</string>
     <string name="timetable_credit">Entstanden mit Hilfe von ulan17</string>
     <string name="time_from">von</string>
     <string name="integrate_substitution_in_timetable">Vertretungen im Stundenplan anzeigen</string>
