added open main app & fixes in notifications

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -494,5 +494,6 @@
     <string name="do_not_disturb_setting">Automatic Do not disturb</string>
     <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects and then switch it off again</string>
     <string name="do_not_disturb_turn_off">Also turning off</string>
+    <string name="action_open_main_app">Main app</string>
 
 </resources>
